tests/ui/issues/issue-30123.stderr
error[E0599]: no function or associated item named `new_undirected` found for struct `issue_30123_aux::Graph<i32, i32>` in the current scope
  --> $DIR/issue-30123.rs:7:33
   |
LL |     let ug = Graph::<i32, i32>::new_undirected();
   |                                 ^^^^^^^^^^^^^^ function or associated item not found in `Graph<i32, i32>`
   |
   = note: the function or associated item was found for
           - `issue_30123_aux::Graph<N, E, Undirected>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
